Updated template and install guide